--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section id="hero">
     <div class="hero-content">
         <h1>Gurihnya Kerupuk Untuk Dunia</h1>
-        <p>Produk Kerupuk berkualitas, dibuat dengan</p>
+        <p>Produk Kerupuk berkualitas, dibuat dengan bahan bahan organik tanpa pengawet</p>
         <a href="https://api.whatsapp.com/send?phone=62817220743&text=Hay%20kak%2C%20saya%20mau%20pesan" target="_blank"
             class="btn-primary">Pesan Sekarang</a>
     </div>
