--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page UMKM</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <nav>
         <img src="asset/logo.png" alt="Logo UMKM" class="logo">
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#hero">Home</a></li>
             <li><a href="#products">Produk</a></li>
             <li><a href="#contact">Tentang Kami</a></li>
             <li><a href="#contact">Hubungi Kami</a></li>
@@ -92,8 +93,6 @@
     <p>Alamat Toko: Jl. Contoh No. 123, Kota Batang | Telepon: 0812-3456-7890</p>
     <p>&copy; 2024 Sidomuncul. Semua Hak Dilindungi.</p>
 </footer>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
